[package]
name = "collclean"
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
repository = "https://github.com/Mountlex/collclean"
description = "Clean up collaboration commands in LaTeX files"

[dependencies]
clap = "4.1.4"
anyhow = "1.0.68"
yansi = "0.5.1"