[package]
name = "collclean"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Lindermayr <alexander.lindermayr97@gmail.com>"]
repository = "https://github.com/Mountlex/collclean"
description = "Clean up collaboration commands in LaTeX files"

[dependencies]
clap = "4.5.53"
anyhow = "1.0.100"
yansi = "1.0.1"